# labelstudio2rttm

./: LICENSE  README.md  labelstudio2rttm.py  pyproject.toml
tests/: test_jsonmin.py
tests/data/: dst.rttm  src.json
